--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
-.hero p {
-<<<<<<< HEAD
+ .hero p {
+
     font-family: "Libre Bodoni", serif;
     text-align: center;
     padding-top: 150px;
@@ -58,23 +58,29 @@
       .project-description {
       padding: 0;
       text-align: center;
+    }
+
+      .about-section {
+        text-align: center;
+        padding: 0;
+      
   }
   }
   
   h3 {
-      font-family: 'Playfair Display', serif;
-      font-weight: bold;
-      font-size: 44px;
+  font-family: 'Playfair Display', serif;
+  font-weight: bold;
+  font-size: 44px;
   }
   
   p {
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 30px;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 30px;
   }
   
   body {
-      font-family: 'Poppins', sans-serif;
+  font-family: 'Poppins', sans-serif;
   }
   .img-fluid {
       max-width: 100%;
@@ -82,109 +88,33 @@
       padding: 20px;
   }
   .container {
-      padding-top: 70px;
+  padding-top: 70px;
   }
   
   .col {
-      margin: 30px;
+   margin: 30px;
   }
   
   .footer {
-      text-align: center;
+ text-align: center;
   }
 
-  
-=======
-  font-family: "Libre Bodoni", serif;
-  text-align: center;
-  padding-top: 150px;
-  font-size: 40px;
-  font-weight: bold;
-  color: #272142;
-}
+  .about-section {
+    padding: 160px 20px;
+  }
 
-.hero h1 {
-  font-family: "Playfair Display";
+ .about-section h1 {
+  font-size: 45px;
+  padding-top: 30px;
   text-align: center;
-  font-size: 30px;
-  font-size: 80px;
-  font-weight: bold;
-}
+ }
 
-.hero h2 {
-  text-align: center;
-  font-family: "Playfair Display";
-  line-height: 2;
-  font-weight: normal;
-}
-
-.hero {
-  background: #f9f7fe;
-  text-align: center;
-}
-.btn-branding{
-        background: #6c63ff;
-    border-radius: 4px;
-    color: white;
-    font-size: 18px;
-    line-height: 27px;
-    padding: 15px 30px;
-     transition: all 150ms ease-in-out;
-}
-.btn-branding-outline {
-  border-radius: 4px;
-  padding: 15px 30px;
-  line-height: 27px;
+ .about-section h2 {
   font-size: 18px;
-  border: 1px solid #6c63ff;
-  color: #6c63ff;
-  transition: all 150ms ease-in-out;
-}
+  font-family: 'Poppins', sans-serif;
+  font-weight: bold;
+  }
 
-@media (max-width:900px) {
-    h1 {
-        font-size: 44px;
-        line-height: 2;
-    }
-    
-    p {
-        font-size: 14px;
-    }
-    .project-description {
-    padding: 0;
-    text-align: center;
-}
-}
-
-h3 {
-    font-family: 'Playfair Display', serif;
-    font-weight: bold;
-    font-size: 44px;
-}
-
-p {
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 30px;
-}
-
-body {
-    font-family: 'Poppins', sans-serif;
-}
-.img-fluid {
-    max-width: 100%;
-    height: auto;
-    padding: 20px;
-}
-.container {
-    padding-top: 70px;
-}
-
-.col {
-    margin: 30px;
-}
-
-.footer {
-    text-align: center;
-}
->>>>>>> 599867bc0a259420545fd68f22e919e0329b559c
+  .about-section-content {
+  margin: 30px;
+  }
