--- a/css/styles.css
+++ b/css/styles.css
@@ -60,7 +60,7 @@
       text-align: center;
     }
 
-      .about-section {
+      .content-container {
         text-align: center;
         padding: 0;
       
@@ -99,22 +99,22 @@
  text-align: center;
   }
 
-  .about-section {
+  .content-container {
     padding: 160px 20px;
   }
 
- .about-section h1 {
+ .content-container h1 {
   font-size: 45px;
   padding-top: 30px;
   text-align: center;
  }
 
- .about-section h2 {
+ .content-container h2 {
   font-size: 18px;
   font-family: 'Poppins', sans-serif;
   font-weight: bold;
   }
 
-  .about-section-content {
+  .content {
   margin: 30px;
   }
