--- a/css/styles.css
+++ b/css/styles.css
@@ -103,18 +103,33 @@
     padding: 160px 20px;
   }
 
- .content-container h1 {
+ .content h1 {
   font-size: 45px;
   padding-top: 30px;
   text-align: center;
  }
 
- .content-container h2 {
+ .content h2 {
   font-size: 18px;
   font-family: 'Poppins', sans-serif;
   font-weight: bold;
   }
 
+  .content h3 {
+    font-size: 24px;
+    font-family: 'Poppins', sans-serif;
+    line-height: 1.5;
+    margin: 20px 0 0;
+  }
+
+  .content p {
+    font-size: 14px;
+  }
   .content {
   margin: 30px;
+  }
+
+  .about-me {
+    margin-top: 60px;
+    text-align: center;
   }
