--- a/css/styles.css
+++ b/css/styles.css
@@ -141,3 +141,35 @@
 .nav-link {
   margin-left: 15px;
 }
+
+footer .email-link{
+text-decoration: none;
+color: white;
+font-size: 24px;
+text-align: center;
+transition: all 150ms ease-in-out;
+padding-top: 40px;
+}
+
+footer {
+  margin: 60px 0;
+  background: #6c63ff;
+  padding: 80px 0 80px;
+  opacity: 0.8;
+  padding-bottom: 90px;
+}
+
+footer .social-links a {
+  margin: 0 20px;
+  color: #6c63ff;
+  background-color: white;
+  padding: 10px 14px;
+  font-size: 18px;
+  border-radius: 50px;
+  transition: all 150ms ease-in-out;
+}
+
+footer .social-links a:hover {
+  color: white;
+  background-color: #6c63ff;
+}
