--- a/css/styles.css
+++ b/css/styles.css
@@ -174,3 +174,15 @@ footer .social-links a:hover {
   color: white;
   background-color: #6c63ff;
 }
+
+.about-me {
+  padding-top: 50px;
+}
+
+.open-sourced {
+  color: white;
+}
+
+.github {
+ color: white; 
+}
