made changed and added newer projects

--- a/css/styles.css
+++ b/css/styles.css
@@ -198,3 +198,13 @@ footer .social-links a:hover {
 .weather-app {
   padding-bottom: 45px;
 }
+
+.second-link {
+  text-align: center;
+  display: block;
+  color: white;
+  background: #6c63ff;
+ padding: 10px 0 10px;
+  line-height: 27px;
+  margin-top: 40px;
+}
